--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <title>Admin Panel</title>
 </head>
 
-<body>
+<body style="height: auto;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
